<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >
    <item android:id="@+id/action_aircraft"
        android:icon="@drawable/acfticon"
        android:title="@string/action_aircraft"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_logbook"
        android:icon="@drawable/ic_logbook_48x48"
        android:title="@string/action_logbook"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_facebook"
        android:icon="@drawable/ic_facebook_black"
        android:title="@string/action_facebook"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_help"
        android:icon="@drawable/ic_action_help"
        android:title="@string/action_help"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_email"
        android:icon="@drawable/ic_action_email_dark"
        android:title="@string/action_email"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />
</menu>
